--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <div class="card" style="margin-top:10px">
           <h4 style="margin:0 0 6px 0">Personal Plan</h4>
           <p class="muted" style="margin:0 0 10px 0">1 tracker • app alerts • basic support</p>
-          <p style="margin:0 0 10px 0"><b>$9.99/mo</b> (demo)</p>
+          <p <p><b>$120</b> one-time (demo)</p>
           <a class="btn" href="checkout.html?plan=personal">Pre-order (demo)</a>
         </div>
 
         <div class="card" style="margin-top:12px">
           <h4 style="margin:0 0 6px 0">Family Plan</h4>
           <p class="muted" style="margin:0 0 10px 0">Up to 5 trackers • shared dashboard • priority support</p>
-          <p style="margin:0 0 10px 0"><b>$19.99/mo</b> (demo)</p>
+          <p style="margin:<p><b>$500</b> one-time (demo)</p>
           <a class="btn" href="checkout.html?plan=family">Pre-order (demo)</a>
         </div>
       </div>
