--- a/checkout.html
+++ b/checkout.html
@@ -72,10 +72,10 @@
     const planDesc = document.getElementById("planDesc");
 
     if (plan === "family") {
-      planTitle.textContent = "Family Plan — $19.99/mo (demo)";
+      planTitle.textContent = "Family Plan — $300 (demo)";
       planDesc.textContent = "Up to 5 trackers • shared dashboard • priority support";
     } else {
-      planTitle.textContent = "Personal Plan — $9.99/mo (demo)";
+      planTitle.textContent = "Personal Plan — $120 (demo)";
       planDesc.textContent = "1 tracker • app alerts • basic support";
     }
 
